# c-Package-Manager

./: CMakeLists.txt
include/: c.h
src/: c.cpp
